# mailru-courses

./: .gitignore  README.md
Algo/week1/: Makefile  bin_search.cpp  find_div.cpp  max_array.cpp
Algo/week2/: Deque.hpp  Makefile  bracket.cpp  bracket_sequence.py  deque.cpp  heap_apples.py
Algo/week3/: Makefile  heap.cpp  insertion_sort.cpp  ksort.cpp  mergesort.cpp
Algo/week4/: hash.cpp
Cpp-course/: .clang_complete
Cpp-course/week1/: w1_task1.c  w1_task2.c  w1_task3.c
Cpp-course/week2/: Makefile  w2_task1.cpp  w2_task2.cpp
Cpp-course/week3/: shape.cpp
Cpp-course/week4/: multiset.cpp
Multithread/: alloc.cpp  derivative.cpp  notes.md
Multithread/week1/: stringpointer.cpp
Multithread/week2/: win_echoserver.cpp
Multithread/week5/: Makefile  unnamed_pipes.c
Multithread/week6/: posix_mem.cpp  posix_q.cpp  posix_sem.cpp  sysv.cpp  sysv_mem.cpp  sysv_sem.cpp
Multithread/week7/: thread_blocks_test.cpp  thread_cond.cpp  thread_test.cpp  thread_wblock.cpp
Multithread/week8/: dataset_12656_4.txt  omp_test.cpp  tbb_merge.cpp
Multithread/week9/: CMakeLists.txt  http_makefile.mk  http_server.cpp  server.cpp
